test_data/end_to_end/err__fn_mismatching_return_types/stderr.txt
error: mismatching return types: function `f1::()` expects `i32`, found `{}`
  --> main.cz:1:16
1 | fn f1() -> i32 {}
                   ~~

error: mismatching return types: function `f2::()` expects `i32`, found `String`
  --> main.cz:3:17
3 | fn f2() -> i32 {""}
                    ~~

error: mismatching return types: function `f3::()` expects `String`, found `i32`
  --> main.cz:6:5
6 |     f1()
        ~~~~

error: mismatching return types: function `f4::()` expects `String`, found `i32`
  --> main.cz:11:5
11 |     f2()
         ~~~~

error: mismatching return types: function `f5::()` expects `i32`, found `{}`
  --> main.cz:15:12
15 |     "stuff";
                ~

error: binary operation `+` can't be applied to types `String`, `?integer`
  --> main.cz:19:11
19 |     "foo" + 32
               ~
